--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "core-js": "^3.6.5",
+    "mapbox-gl": "^2.9.2",
     "realm-web": "^1.7.1",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
