--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@capacitor/status-bar": "4.0.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@types/proj4": "^2.5.2",
     "core-js": "^3.6.5",
     "mapbox-gl": "^2.9.2",
+    "proj4": "^2.8.0",
     "realm-web": "^1.7.1",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12",
