--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/proj4": "^2.5.2",
     "core-js": "^3.6.5",
     "mapbox-gl": "^2.9.2",
+    "pdf-lib": "^1.17.1",
     "proj4": "^2.8.0",
     "realm-web": "^1.7.1",
     "vue": "^3.2.21",
