--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "@types/proj4": "^2.5.2",
+    "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.6.5",
     "mapbox-gl": "^2.9.2",
     "pdf-lib": "^1.17.1",
