CreatePDF can export a PDF file from template HTML

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/proj4": "^2.5.2",
     "@vuepic/vue-datepicker": "^3.4.8",
     "core-js": "^3.6.5",
+    "html-to-pdfmake": "^2.4.6",
+    "jspdf": "^2.5.1",
     "mapbox-gl": "^2.9.2",
-    "pdf-lib": "^1.17.1",
+    "pdfmake": "^0.2.5",
     "proj4": "^2.8.0",
     "realm-web": "^1.7.1",
     "vue": "^3.2.21",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "4.0.1",
+    "@types/html-to-pdfmake": "^2.1.1",
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
