--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "realm-web": "^1.7.1",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12",
+    "vue3-signature": "^0.2.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
