--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf": "^2.5.1",
     "mapbox-gl": "^2.9.2",
     "pdfmake": "^0.2.5",
+    "pdfvuer": "^2.0.1",
     "proj4": "^2.8.0",
     "realm-web": "^1.7.1",
     "register-service-worker": "^1.7.2",
