--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-to-pdfmake": "^2.4.6",
     "jspdf": "^2.5.1",
     "mapbox-gl": "^2.9.2",
+    "pdfjs-dist": "^2.16.105",
     "pdfmake": "^0.2.5",
     "pdfvuer": "^2.0.1",
     "proj4": "^2.8.0",
