--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "proj4": "^2.8.0",
     "realm-web": "^1.7.1",
     "register-service-worker": "^1.7.2",
+    "swiper": "^9.2.0",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12",
     "vue3-signature": "^0.2.2",
